--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-editorjs",
+  "name": "@dicarbene/vue-editorjs",
   "version": "0.1.0",
   "type": "module",
   "author": "dicarbene <palytoxin@foxmail.com>",
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build:docs": "vite build --mode docs",
     "build:lib": "vue-tsc --noEmit && vite build --mode lib",
+    "release": "npm run build:lib && npm publish",
     "preview": "vite preview",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
   },
